# gamesh

./: CMakeLists.txt  default.nix
examples/: keyboard-test.c
src/: CMakeLists.txt  fd-manager.c  game-runner.c  gamesh.c  opcodes.db  sdl-runner.c
src/gamesh/: fd-manager.h  game-runner.h  gamesh.h
tests/: CMakeLists.txt  gamesh_fd_manager.c
